[metadata]
name = pyownet
version = attr: pyownet.__version__
description = Python OWFS client library (owserver protocol)
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Stefano Miccoli
author_email = stefano.miccoli@polimi.it
url = https://github.com/miccoli/pyownet
license = LGPLv3
license_file = LICENSE.txt
keywords = OWFS
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Other Environment
        Intended Audience :: Developers
        License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
        Programming Language :: Python
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Home Automation

[options]
packages = pyownet
package_dir = =src
use_2to3 = True
